Fix top nav spacing/extending issue at very small screen sizes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,7 +42,7 @@ button {
     /* defining the space the nav itself takes up */
     grid-column: 1 / 7;
     grid-row: 1 / 3;
-    padding: 20px 15% 5%;
+    padding: 20px 205px 68px;
     /* min-width: 100vw; */
     /* min-height: 90px; */
     background: url("images/background-image@2x.png") no-repeat;
